Adicionado o plugin Findbugs e corrigidos os problemas encontrados.